--- a/nita front end bootcamp/W4/D2/positioning/positioning.html
+++ b/nita front end bootcamp/W4/D2/positioning/positioning.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <p>this is flag of</p>
     <div class="pink-box"></div>
+    <p class="x">country x</p>
     <div class="yellowgreen-rounded-rectangle"></div>
     <div class="blue-circle"></div>
   </body>
