add country name

--- a/nita front end bootcamp/W4/D2/positioning/positioning.html
+++ b/nita front end bootcamp/W4/D2/positioning/positioning.html
@@ -12,5 +12,13 @@
     <p class="x">country x</p>
     <div class="yellowgreen-rounded-rectangle"></div>
     <div class="blue-circle"></div>
+    <br />
+    <div class="palau"></div>
+    <div class="circle-palau"></div>
+    <h3>palau flag</h3>
+    <br>
+    <div class="japan"></div>
+    <div class="circle"></div>
+    <h3 class="japan-title">japan</h3>
   </body>
 </html>
