form demo added

--- a/nita front end bootcamp/W4/D2/positioning/positioning.html
+++ b/nita front end bootcamp/W4/D2/positioning/positioning.html
@@ -8,17 +8,47 @@
   </head>
   <body>
     <p>this is flag of</p>
+    <!-- start country x -->
     <div class="pink-box"></div>
     <p class="x">country x</p>
     <div class="yellowgreen-rounded-rectangle"></div>
     <div class="blue-circle"></div>
+    <!-- end country x -->
     <br />
+    <!-- start  japan country -->
+
     <div class="palau"></div>
     <div class="circle-palau"></div>
     <h3>palau flag</h3>
-    <br>
+    <br />
     <div class="japan"></div>
     <div class="circle"></div>
     <h3 class="japan-title">japan</h3>
+    <!-- end  japan country -->
+    <br />
+    <!-- start  ukraine country -->
+
+    <div class="yellow-box"></div>
+    <div id="blue"></div>
+    <h3 class="ukraine-title">ukraine</h3>
+    <!-- end  ukraine country -->
+
+    <br />
+    <!-- start  latvia country -->
+
+    <div class="latvia"></div>
+    <div class="white-box"></div>
+    <div class="latvia"></div>
+    <h3 class="latvia-name">latvia</h3>
+    <!-- end  latvia country -->
+
+    <br />
+    <!-- start  nigeria country -->
+    <div class="nigeria"></div>
+    <div class="white-box-n"></div>
+    <div class="nigeria2"></div>
+    <h3 class="nigeria-name">nigeria</h3>
+  
+    <!-- end  nigeria country -->
   </body>
 </html>
