--- a/nita front end bootcamp/W4/D2/layoutFlexbox/flexboxLayout.html
+++ b/nita front end bootcamp/W4/D2/layoutFlexbox/flexboxLayout.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-   <h2>3 of my favorite browsers</h2> 
-<section>
-    <ul>
-        <li><a href="https://google.com">google</a></li>
-        <li><a href="https://edge.com">edge</a></li>
-        <li><a href="https://brave.com">brave</a></li>
-    </ul>
-</section>
-</body>
+  </head>
+  <body>
+    <header>
+      <h2>3 of my favorite browsers</h2>
+    </header>
+    <section>
+      <nav>
+        <ul>
+          <li><a href="https://google.com">google</a></li>
+          <li><a href="https://edge.com">edge</a></li>
+          <li><a href="https://brave.com">brave</a></li>
+        </ul>
+      </nav>
+      <article>
+        <h1>Browsers</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
+          Perferendis ullam similique illo est, esse sunt excepturi voluptas
+          <br />
+          voluptate architecto sit magni in error magnam quod repudiandae
+          tenetur eligendi illum omnis! <br />
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
+          Perferendis ullam similique illo est, esse sunt excepturi voluptas
+          <br />
+          voluptate architecto sit magni in error magnam quod repudiandae
+          tenetur eligendi illum omnis! <br />
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
+          Perferendis ullam similique illo est, esse sunt excepturi voluptas
+          <br />
+          voluptate architecto sit magni in error magnam quod repudiandae
+          tenetur eligendi illum omnis! <br />
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
+          Perferendis ullam similique illo est, esse sunt excepturi voluptas
+          <br />
+          voluptate architecto sit magni in error magnam quod repudiandae
+          tenetur eligendi illum omnis! <br />
+        </p>
+      </article>
+    </section>
+  </body>
 </html>
