flexbox layout css added

--- a/nita front end bootcamp/W4/D2/formDemo/formDemo.html
+++ b/nita front end bootcamp/W4/D2/formDemo/formDemo.html
@@ -17,6 +17,7 @@
         padding: 1.5px;
         font-size: medium;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        box-sizing: border-box;
       }
     </style>
   </head>
