--- a/nita front end bootcamp/W4/D2/layoutFlexbox/flexboxLayout.html
+++ b/nita front end bootcamp/W4/D2/layoutFlexbox/flexboxLayout.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="flexboxLayout.css">
     <title>Document</title>
   </head>
   <body>
@@ -43,5 +44,6 @@
         </p>
       </article>
     </section>
+    <footer>This is The Footer</footer>
   </body>
 </html>
