--- a/nita front end bootcamp/W4/D2/Float Layout/floatLayout.html
+++ b/nita front end bootcamp/W4/D2/Float Layout/floatLayout.html
@@ -18,6 +18,8 @@
           <li><a href="https://brave.com">brave</a></li>
         </ul>
       </nav>
+      <aside>This is the demo of aside</aside>
+
       <article>
         <h1>Browsers</h1>
         <p>
