--- a/nita front end bootcamp/W4/D2/layoutFlexbox/flexboxLayout.html
+++ b/nita front end bootcamp/W4/D2/layoutFlexbox/flexboxLayout.html
@@ -43,6 +43,7 @@
           tenetur eligendi illum omnis! <br />
         </p>
       </article>
+      <aside>This is the demo of aside</aside>
     </section>
     <footer>This is The Footer</footer>
   </body>
