coffee beans website home page added

--- a/nita front end bootcamp/W4/D2/layoutFlexbox/flexboxLayout.html
+++ b/nita front end bootcamp/W4/D2/layoutFlexbox/flexboxLayout.html
@@ -46,5 +46,12 @@
       <aside>This is the demo of aside</aside>
     </section>
     <footer>This is The Footer</footer>
+
+    <div class="gridParent">
+      <div class="gridItem"><iframe src="/Float Layout/floatLayout.html" frameborder="0"></iframe></div>
+      <div class="gridItem"><iframe src="/Float Layout/floatLayout.html" frameborder="0"></iframe></div>
+      <div class="gridItem"><iframe src="/Float Layout/floatLayout.html" frameborder="0"></iframe></div>
+      <div class="gridItem"><iframe src="/Float Layout/floatLayout.html" frameborder="0"></iframe></div>
+    </div>
   </body>
 </html>
