--- a/nita front end bootcamp/W4/D3/coffeeBeans/index.html
+++ b/nita front end bootcamp/W4/D3/coffeeBeans/index.html
@@ -20,7 +20,7 @@
       <a href="#" class="navItem">Home</a>
       <a href="#" class="navItem">Shop</a>
       <a href="#" class="navItem">About Us</a>
-      <a href="#" class="navItem">Contact Us</a>
+      <a href="contactUs.html" class="navItem">Contact Us</a>
     </nav>
     <section>
       <p>
@@ -57,6 +57,10 @@
         <div class="gridItem"><img src="./index/Extra Dark.png" /></div>
       </div>
     </section>
-    <footer>© 2023 Coffee Beans. All Rights Reserved.</footer>
+
+    <footer>
+      © 2023 Coffee Beans. All Rights Reserved.
+      <img src="./index/Group 2.png" alt="" />
+    </footer>
   </body>
 </html>
