svg movement demo added

--- a/nita front end bootcamp/W4/D2/positioning/positioning.html
+++ b/nita front end bootcamp/W4/D2/positioning/positioning.html
@@ -44,11 +44,13 @@
 
     <br />
     <!-- start  nigeria country -->
-    <div class="nigeria"></div>
-    <div class="white-box-n"></div>
-    <div class="nigeria2"></div>
-    <h3 class="nigeria-name">nigeria</h3>
-  
+    <div class="nigeria">
+      <div class="nigeria2"></div>
+      <div class="white-box"></div>
+      <div class="nigeria2"></div>
+      <h3 class="nigeria-name">nigeria</h3>
+    </div>
+
     <!-- end  nigeria country -->
   </body>
 </html>
