--- a/nita front end bootcamp/W4/D4/flotLayoutEx.html
+++ b/nita front end bootcamp/W4/D4/flotLayoutEx.html
@@ -10,8 +10,7 @@
       box-sizing: border-box;
       margin: 0px;
     }
-   
-    
+
     iframe {
       width: 560px;
       height: 315;
@@ -24,6 +23,10 @@
     ul {
       text-decoration: none;
       list-style: none;
+      flex: 2px;
+      align-self: auto;
+      align-content: center;
+      align-items: center;
     }
     li {
       float: left;
@@ -39,7 +42,6 @@
       color: black;
       cursor: alias;
     }
-
   </style>
   <body>
     <section class="mainDiv">
