--- a/nita front end bootcamp/W4/D5/svgPath.html
+++ b/nita front end bootcamp/W4/D5/svgPath.html
@@ -36,8 +36,10 @@
       }
       .imageFilter {
         filter: blur(3px);
-        /* opacity: 0.3; */
-        /* filter: brightness(100%); */
+        opacity: 0.3;
+        filter: brightness(100%);
+        filter: contrast(120%);
+        
       }
     </style>
   </head>
