--- a/nita front end bootcamp/W4/D5/firstExam.html
+++ b/nita front end bootcamp/W4/D5/firstExam.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="firstExam.css" />
     <title>Document</title>
     <style>
       .flag {
@@ -12,19 +11,19 @@
         height: 300px;
         position: relative;
       }
+      .WhiteVertical,
+      .WhiteHorizontal {
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+      }
       .WhiteVertical {
         width: 30px;
         height: 300px;
-        background-color: rgb(255, 255, 255);
-        position: absolute;
-        top: 0px;
         left: 100px;
       }
       .WhiteHorizontal {
         width: 500px;
         height: 30px;
-        background-color: rgb(249, 250, 248);
-        position: absolute;
         top: 100px;
       }
     </style>
