edit coffee beans style  added

--- a/nita front end bootcamp/W4/D3/coffeeBeans/index.html
+++ b/nita front end bootcamp/W4/D3/coffeeBeans/index.html
@@ -11,64 +11,55 @@
     />
   </head>
   <body>
-     <nav class="navParent">
-      <a href="#">
-        <img
-          id="logo"
-          src="./index/c353215aec587b47071b8dafa449362d6e9e47dfa9941f921c5b70e0cbb8c228-removebg-preview 1.png"
-      /></a>
-      <a href="#" class="navItem">Home</a>
-      <a href="#" class="navItem">Shop</a>
-      <a href="#" class="navItem">About Us</a>
-      <a href="contactUs.html" class="navItem">Contact Us</a>
-    </nav>
-    </div>
-    <img
-      id="img"
-      src="./index/photo-1587734195503-904fca47e0e9-removebg-preview 1.png"
-      alt=""
-    />
-
-   
-    <section>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
-        Perferendis ullam similique illo est, esse sunt excepturi voluptas
+    <iframe src="./nav.html" scrolling="no" frameborder="0"></iframe>
+    <article>
+      <img
+        id="img"
+        src="./index/photo-1587734195503-904fca47e0e9-removebg-preview 1.png"
+        alt=""
+      />
+    </article>
+    <aside>
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
+          Perferendis ullam similique illo est, esse sunt excepturi voluptas
+          <br />
+          voluptate architecto sit magni in error magnam quod repudiandae
+          tenetur eligendi illum omnis! <br />
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
+          Perferendis ullam similique illo est, esse sunt excepturi voluptas
+          <br />
+          voluptate architecto sit magni in error magnam quod repudiandae
+          tenetur eligendi illum omnis! <br />
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
+          Perferendis ullam similique illo est, esse sunt excepturi voluptas
+          <br />
+          voluptate architecto sit magni in error magnam quod repudiandae
+          tenetur eligendi illum omnis! <br />
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
+          Perferendis ullam similique illo est, esse sunt excepturi voluptas
+          <br />
+          voluptate architecto sit magni in error magnam quod repudiandae
+          tenetur eligendi illum omnis! <br />
+        </p>
         <br />
-        voluptate architecto sit magni in error magnam quod repudiandae tenetur
-        eligendi illum omnis! <br />
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
-        Perferendis ullam similique illo est, esse sunt excepturi voluptas
         <br />
-        voluptate architecto sit magni in error magnam quod repudiandae tenetur
-        eligendi illum omnis! <br />
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
-        Perferendis ullam similique illo est, esse sunt excepturi voluptas
-        <br />
-        voluptate architecto sit magni in error magnam quod repudiandae tenetur
-        eligendi illum omnis! <br />
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
-        Perferendis ullam similique illo est, esse sunt excepturi voluptas
-        <br />
-        voluptate architecto sit magni in error magnam quod repudiandae tenetur
-        eligendi illum omnis! <br />
-      </p>
-      <br />
-      <br />
-      <br /><br />
-      <br /><br />
-      <h2>Our Types of Coffee Roasts</h2>
-      <div class="gridParent">
-        <div class="gridItem"><img src="./index/Light.png" /></div>
-        <div class="gridItem"><img src="./index/Group 32.png" /></div>
-        <div class="gridItem"><img src="./index/Group 33.png" /></div>
-        <div class="gridItem"><img src="./index/Extra Dark.png" /></div>
-      </div>
-    </section>
-
+        <br /><br />
+        <br /><br />
+        <h2>Our Types of Coffee Roasts</h2>
+        <div class="gridParent">
+          <div class="gridItem"><img src="./index/Light.png" /></div>
+          <div class="gridItem"><img src="./index/Group 32.png" /></div>
+          <div class="gridItem"><img src="./index/Group 33.png" /></div>
+          <div class="gridItem"><img src="./index/Extra Dark.png" /></div>
+        </div>
+      </section>
+    </aside>
     <footer>
       © 2023 Coffee Beans. All Rights Reserved.
       <img src="./index/Group 2.png" alt="" />
     </footer>
+    <!-- <iframe src="./footer.html" frameborder="0"></iframe> -->
   </body>
 </html>
