--- a/nita front end bootcamp/W4/D3/coffeeBeans/index.html
+++ b/nita front end bootcamp/W4/D3/coffeeBeans/index.html
@@ -11,7 +11,11 @@
     />
   </head>
   <body>
-     <nav class="navParent">
+    <script type="module" src='./Module/nav.js'>
+      import nav from './Module/nav.js'
+    </script>
+    
+     <!-- <nav class="navParent">
       <a href="#">
         <img
           id="logo"
@@ -21,7 +25,7 @@
       <a href="#" class="navItem">Shop</a>
       <a href="#" class="navItem">About Us</a>
       <a href="contactUs.html" class="navItem">Contact Us</a>
-    </nav>
+    </nav> -->
     </div>
     <img
       id="img"
