--- a/nita front end bootcamp/W5/D4/ImportExsmpleDemo.html
+++ b/nita front end bootcamp/W5/D4/ImportExsmpleDemo.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h3>Import Example Demo</h3>
-    <script type="module">
-        import {PI} from '/Module.js'
+    <script type="module"  src='./Module.js'>
+        import {PI} from './Module.js'
       console.log(PI);
     </script>
   </body>
