object prototype added

--- a/nita front end bootcamp/W4/D3/coffeeBeans/index.html
+++ b/nita front end bootcamp/W4/D3/coffeeBeans/index.html
@@ -29,10 +29,10 @@
     />
     <div id="nav-module"></div>
     <iframe src="./nav.html" frameborder="0" scrolling="no"></iframe>
-    <script type="module" >
-      import nav from './nav.html'
-    document.getElementById("nav-module").innerHTML=nav
-  </script>
+    <script type="module" src="./Module/nav.js">
+      import nav from "D:/website/nita-front-end-bootcamp/nita front end bootcamp/W4/D3/coffeeBeans/Module/nav.js";
+      document.getElementById("nav-module").innerHTML = nav;
+    </script>
     <section>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br />
