--- a/nita front end bootcamp/W5/D5/objectsDemo.html
+++ b/nita front end bootcamp/W5/D5/objectsDemo.html
@@ -29,6 +29,8 @@
         console.log(`car Type ${(this.type = type)}`);
         console.log(`car year ${(this.year = year)}`);
       }
+
+      //   ------------------ print array of object in table ----------------------
       const volvoXC90 = new car("XC90", "Volvo", "SUV", 2022);
       const BMW = new car("3Series", "BMW", "Sedan", 2022);
       const GMY = new car("YuKUN", "GMY", "SUV", 2022);
