--- a/nitaF/W7/D5/public/index.html
+++ b/nitaF/W7/D5/public/index.html
@@ -15,8 +15,23 @@
     <section>
       <h1>This is Home Page</h1>
       <br>
-      
+      <!-- <button id="shop">shop</button>
+      <button id="contact">content</button> -->
     </section>
+    
+    <!-- <script>
+      function fetchPage(page) {
+        fetch(`/${page}`)
+          .then((response) => response.text())
+          .then((data) => (document.querySelector("*").innerHTML = data));
+      }
+      document.getElementById("shop").addEventListener("click", () => {
+        fetchPage("shop");
+      });
+      document.getElementById("contact").addEventListener("click", () => {
+        fetchPage("contact");
+      });
+    </script> -->
     <footer>
       © 2023 Coffee Beans. All Rights Reserved.
       <img src="./index/Group 2.png" alt="" />
