--- a/nitaF/W7/D5/public/shop.html
+++ b/nitaF/W7/D5/public/shop.html
@@ -16,7 +16,7 @@
       <h1>This is Shop Page</h1>
 
       <button id="shop">home</button>
-      <button id="contact">content</button>
+      <button id="contact">contact us</button>
     </section>
     <script>
       //--------------------------fetch---------------------------
