--- a/nitaF/W7/D5/public/index.html
+++ b/nitaF/W7/D5/public/index.html
@@ -16,7 +16,7 @@
       <h1>This is Home Page</h1>
       <br />
       <button id="shop" onclick="fetchPage('shop')">shop</button>
-      <button id="contact" onclick="fetchPage('contact')">content</button>
+      <button id="contact" onclick="fetchPage('contact')">contact us</button>
       <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     </section>
     <script>
