--- a/nitaF/W7/D5/public/contactUs.html
+++ b/nitaF/W7/D5/public/contactUs.html
@@ -32,7 +32,7 @@
             }
           }
         };
-        xhr.open(`Get`, `/${page}`);
+        xhr.open(`Get`, `/${page}`,true);
         xhr.send();
       }
     </script>
