--- a/nitaF/W7/D5/public/index.html
+++ b/nitaF/W7/D5/public/index.html
@@ -15,8 +15,8 @@
     <section>
       <h1>This is Home Page</h1>
       <br />
-      <button id="shop" onclick="fetchPage('shop')">shop</button>
-      <button id="contact" onclick="fetchPage('contact')">contact us</button>
+      <button onclick="fetchPage('shop')">shop</button>
+      <button onclick="fetchPage('contact')">contact us</button>
       <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     </section>
     <script>
