bootstrap demo added

--- a/nitaF/W7/D5/public/shop.html
+++ b/nitaF/W7/D5/public/shop.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav class="navParent">
-      <a href="index.html" class="navItem">Home</a>
+      <a href="index.html" class="navItem" oncl>Home</a>
       <a href="shop.html" class="navItem">Shop</a>
       <a href="contactUs.html" class="navItem">Contact Us</a>
     </nav>
